Planning poker test

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,51 @@
-/* You can add global styles to this file, and also import other style files */
+
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+$color-primary: #6429cd;
+$color-secondary: #BB65FF;
+$color-tertiary: #6030ff;
+$color-quaternary: #BDBDFF;
+$color-quinary: #330072;
+$color-light: #F6F7FC;
+$color-background-main: radial-gradient(50% 50% at 50% 50%, $color-quinary 0%, rgba(31, 13, 63, 0.7) 100%);
+
+*,*::before,*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
+html{
+    scroll-behavior: smooth;
+    background-color: #121212;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    color: $color-light;
+}
+
+html::-webkit-scrollbar{
+    width: 8px;
+    background-color: black;
+}
+
+html::-webkit-scrollbar-thumb{
+    border: 1px solid white;
+    border-radius: 5px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.991) 21%, rgb(73, 156, 229) 100%, rgba(255, 255, 255, 0) 100%);
+}
+
+h1, h2, h3, h4, h5, h6 p, span, a, strong, blockquote, i, b, u, em{
+    text-decoration: none;
+}
+
+ul,ol {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
