Planning poker more test for more coverage

--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isLoading | async"  class="loader-container">
+<div *ngIf="isLoading | async" class="loader-container"  data-test-id="loader" >
   <div class="loading">
     <img src="../../../assets/svgs/ficha-poker-pragma.svg" alt="Logo" class="logo" />
   </div>
