--- a/src/app/pages/create-game/create-game.page.scss
+++ b/src/app/pages/create-game/create-game.page.scss
@@ -76,9 +76,20 @@
                 &::placeholder{
                     color:  rgba(255, 255, 255, 0.288);
                 }
+
+                &__error {
+                    display: block;
+                    opacity: 0;
+                    min-height: 1.2rem;
+                    font-size: .7rem;
+                    color: $color-red;
+                    &--right {
+                        opacity: 1;
+                    }
+                }
             }
             &__button {
-                margin: 1rem auto 0;
+                margin: .5rem auto 0;
                 width: 159px;
                 height: 2.3rem;
                 border-radius: 3.125rem;
@@ -89,6 +100,12 @@
                 border: none;
                 outline: none;
                 cursor: pointer;
+                &:disabled {
+                    background: #9D9DA14D;
+                    cursor: not-allowed;
+                    opacity: 0.6;
+                    color: $color-light;
+                }
             }
         }
     }
