--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -1,5 +1,7 @@
 <div class="conten-custom" >
 
+  <app-form-user></app-form-user>
+
   <app-header-game></app-header-game>
 
   <app-table></app-table>
