--- a/src/app/components/header-game/header-game.component.scss
+++ b/src/app/components/header-game/header-game.component.scss
@@ -12,7 +12,6 @@
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
         flex-wrap: wrap;
         gap: 1rem;
 
@@ -35,7 +34,8 @@
     }
 
     &__game-name {
-        margin: 0.5rem 0;
+        margin: 0.5rem 0;   
+        flex: 1;
 
         &-text {
             text-transform: capitalize;
