--- a/src/app/components/header-game/header-game.component.html
+++ b/src/app/components/header-game/header-game.component.html
@@ -4,7 +4,7 @@
                 <img class="header__logo-image" src="../../../assets/svgs/ficha-poker-pragma.svg" alt="Logo Poker Pragma" />
             </div>
             <h1 class="header__game-name">
-                <span class="header__game-name-text">{{ gameName || 'rgeg' }}</span>
+                <span class="header__game-name-text">{{ gameName || 'Not name game' }}</span>
             </h1>
             <div class="header__user">
                 <p class="header__user-acronym">{{ getAcronyUserName() }}</p>
